[gd_scene load_steps=4 format=3 uid="uid://pause_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_pause"]

[sub_resource type="StyleBoxFlat" id="StyleBox_panel_bg"]
bg_color = Color(0.02, 0.02, 0.05, 0.95)

[sub_resource type="StyleBoxFlat" id="StyleBox_button"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.8, 0.8, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBox_button_hover"]
bg_color = Color(0, 0.3, 0.3, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 36
font_color = Color(0, 1, 1, 1)

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_pause")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.05, 0.9)

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "‚è∏ PAUSE"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_styles/normal = SubResource("StyleBox_button")
theme_override_styles/hover = SubResource("StyleBox_button_hover")
text = "‚ñ∂ REPRENDRE"

[node name="OptionsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBox_button")
theme_override_styles/hover = SubResource("StyleBox_button_hover")
text = "‚öô OPTIONS"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBox_button")
theme_override_styles/hover = SubResource("StyleBox_button_hover")
text = "üö™ QUITTER"

[connection signal="pressed" from="Panel/VBox/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBox/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBox/QuitButton" to="." method="_on_quit_pressed"]
